# langgraph-platzi

./: langgraph.json  pyproject.toml
noteboooks/: 01-notebook.ipynb  02-simple.ipynb  03-messages.ipynb  04-llm.ipynb  05-rag.ipynb  06-chaining.ipynb  07-structured_output.ipynb  09-prompting.ipynb  10-tools.ipynb  11-conditions.ipynb
src/agents/: main.py  rag.py  simple.py
src/agents/support/: agent.py  state.py
src/agents/support/nodes/booking/: node.py  prompt.py  tools.py
src/agents/support/nodes/conversation/: node.py  prompt.py  tools.py
src/agents/support/nodes/extractor/: node.py  prompt.py
src/agents/support/routes/intent/: prompt.py  route.py
