[project]
name = "learning-langgraph-platzi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.2",
    "langchain-google-vertexai>=3.2.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.1.0",
    "langgraph-cli[inmem]>=0.4.11",
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
